--- a/index.html
+++ b/index.html
@@ -19,6 +19,6 @@
     specification during the delivery period, provided these changes or variations can be deemed 
     reasonable for the customer, while taking into 
     account the interests of Mercedes-Benz Group AG.</p>
-
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eaque, nobis!</p>
 </body>
 </html>
